[package]
name = "winit-it"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { path = ".." }
log = "0.4.14"
libc = "0.2.105"
uapi = "0.2.2"
simple_logger = "1.13.0"
tokio = { version = "1.13.0", features = ["rt", "time", "io-std", "net", "macros", "sync"] }
parking_lot = "0.11.2"
futures = "0.3.17"
xcb-dl = "0.2.0"
xcb-dl-util = { version = "0.2.0", features = ["xcb_xinput"]  }
chrono = "0.4.19"
backtrace = "0.3.63"
byteorder = "1.4.3"
cfg-if = "1.0.0"
bitflags = "1.3.2"
rayon = "1.5.1"
mio = "0.8.0"
bstr = "0.2.17"
colored = "2.0.0"
isnt = "0.1.0"
