[package]
description = "Apple/Darwin-specific Winit helpers"
documentation = "https://docs.rs/winit-apple-common"
edition.workspace = true
license.workspace = true
name = "winit-apple-common"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[dependencies]
tracing.workspace = true
winit-core.workspace = true

# Apple-specific
[target.'cfg(target_vendor = "apple")'.dependencies]
block2.workspace = true
objc2.workspace = true
objc2-core-foundation = { workspace = true, features = ["std", "CFRunLoop", "CFString"] }
objc2-foundation = { workspace = true, features = [
    "std",
    "block2",
    "NSNotification",
    "NSOperation",
    "NSString",
] }
