[package]
authors = ["The winit contributors", "Kirill Chibisov <contact@kchibisov.com>"]
categories = ["gui"]
description = "winit core API."
documentation = "https://docs.rs/winit-core"
edition.workspace = true
keywords = ["windowing"]
license.workspace = true
name = "winit-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
serde = [
    "dep:serde",
    "bitflags/serde",
    "cursor-icon/serde",
    "dpi/serde",
    "keyboard-types/serde",
    "smol_str/serde",
]

[dependencies]
bitflags.workspace = true
cursor-icon.workspace = true
dpi.workspace = true
keyboard-types.workspace = true
rwh_06.workspace = true
serde = { workspace = true, optional = true }
smol_str.workspace = true

# `wasm32-unknown-unknown` and `wasm32-none`, but not `wasm32-wasi`.
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
web-time.workspace = true

[dev-dependencies]
winit.workspace = true
